--- a/style.css
+++ b/style.css
@@ -95,3 +95,18 @@ footer {
 audio {
   display: none; /* supaya gak muncul control default */
 }
+
+.download-buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  margin-top: 1.5rem;
+}
+
+@media (min-width: 600px) {
+  .download-buttons {
+    flex-direction: row;
+    justify-content: center;
+  }
+}
