--- a/style.css
+++ b/style.css
@@ -110,3 +110,20 @@ audio {
     justify-content: center;
   }
 }
+
+button {
+  background-color: #8e6f3e;
+  color: #fff;
+  font-family: 'MedievalSharp', cursive;
+  padding: 0.7rem 1.5rem;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 1rem;
+  margin: 1rem auto;
+  display: block;
+}
+
+button:hover {
+  background-color: #a88447;
+}
