--- a/style.css
+++ b/style.css
@@ -12,6 +12,15 @@ body {
   background-color: #1a1a1a;
 }
 
+header {
+  text-align: center;
+}
+
+footer p {
+  text-align: center;
+  margin: 0;
+}
+
 main, header, footer, section {
   background-color: rgba(0, 0, 0, 0.7);
   padding: 2rem;
