--- a/style.css
+++ b/style.css
@@ -235,6 +235,28 @@ footer {
   flex-wrap: wrap;
 }
 
+#muteBtn {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #8e6f3e;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  font-size: 1.5rem;
+  box-shadow: 0 0 10px #000;
+  cursor: pointer;
+  z-index: 99999;
+  transition: background 0.3s ease;
+}
+
+#muteBtn:hover {
+  background-color: #a88447;
+}
+
+
 
 @keyframes fadeOut {
   to {
